Name:                asn1-data
Version:             0.6.1.1
Description:
    ASN1 data reader and writer in raw form with supports for high level forms of ASN1 (BER, CER and DER).
    .
    All interfaces use the enumerator interface.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            ASN1 data reader and writer in RAW, BER, DER and CER forms
Build-Type:          Simple
Category:            Data
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-asn1-data
data-files:          README, TODO


Flag test
  Description:       Build unit test
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , text >= 0.11
                   , enumerator >= 0.4.5 && < 0.5
                   , attoparsec >= 0.8 && < 0.11
                   , attoparsec-enumerator >= 0.2 && < 0.4
                   , mtl
  Exposed-modules:   Data.ASN1.BER
                     Data.ASN1.CER
                     Data.ASN1.DER
                     Data.ASN1.Raw
                     Data.ASN1.BitArray
                     Data.ASN1.Types
                     Data.ASN1.Stream
  other-modules:     Data.ASN1.Prim
                     Data.ASN1.Internal
  ghc-options:       -Wall

Executable           Tests
  Main-Is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-depends:   base >= 3 && < 7
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , test-framework >= 0.3
                   , test-framework-quickcheck2 >= 0.2
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-asn1-data
