Name:                asn1-encoding
Version:             0.8.1.2
Description:
    ASN1 data reader and writer in raw form with supports for high level forms of ASN1 (BER, and DER).
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            ASN1 data reader and writer in RAW, BER and DER forms
Build-Type:          Simple
Category:            Data
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-asn1

Flag test
  Description:       Build unit test
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , text >= 0.11
                   , mtl
                   , time
                   , asn1-types >= 0.2.1 && < 0.3

  Exposed-modules:   Data.ASN1.Error
                     Data.ASN1.BinaryEncoding
                     Data.ASN1.BinaryEncoding.Raw
                     Data.ASN1.Encoding
                     Data.ASN1.Stream
                     Data.ASN1.Object
  other-modules:     Data.ASN1.Prim
                     Data.ASN1.BinaryEncoding.Parse
                     Data.ASN1.BinaryEncoding.Writer
                     Data.ASN1.Internal
                     Data.ASN1.Serialize
                     Data.ASN1.Get
  ghc-options:       -Wall

Executable           Tests
  Main-Is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-depends:   base >= 3 && < 7
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , test-framework >= 0.3
                   , test-framework-quickcheck2 >= 0.2
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-asn1
